# stock_trader

./: .gitignore  README.md  VERCEL_DEPLOYMENT.md  config.py  executive_moves.py  features.py  historical_intents.py  market_open_job.py  market_research.py  model.py  portfolio.py  pyproject.toml  requirements.txt  scheduler.py  schwab_client.py  sentiment_overlay.py  trader.py  vercel.json
api/: market_open.py  subscribe.py  subscribers.py
models/: gb_latest.pkl  lr_latest.pkl  metadata.json
