[project]
name = "stock-trader"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "yfinance>=0.2.28",
  "ta>=0.11",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "joblib>=1.3",
  "pytz>=2023.3",
]

[tool.vercel]
entrypoint = "api.market_open:handler"
